components/prombench/manifests/results/deletion-reminder.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deletion-reminder
spec:
  replicas: 1
  selector:
    matchLabels:
      app: deletion-reminder
  template:
    metadata:
      labels:
        app: deletion-reminder
    spec:
      serviceAccountName: deletion-reminder
      containers:
      - name: deletion-reminder
        image: docker.io/prombench/deletion-reminder:1.0.0
        imagePullPolicy: Always
        args:
        - "remind"
        - "-f"
        - "/etc/github/oauth"
        volumeMounts:
        - name: oauth
          mountPath: /etc/github
          readOnly: true
      volumes:
      - name: oauth
        secret:
          secretName: oauth-token
