components/prombench/manifests/results/dashboard_ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-prometheus-meta
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: prometheus-meta
          servicePort: prom-web
        path: /prometheus-meta
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-grafana
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: grafana-web
        path: /grafana(/|$)(.*)
